--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "license" : "MIT",
     "name" : "webservco/jsonapi-application",
     "require": {
-        "php" : "^8.2"
+        "php" : "^8.3",
+        "psr/http-message": "^2",
+        "webservco/data": "^0",
+        "webservco/jsonapi": "^0"
     },
     "require-dev": {
         "pds/skeleton": "^1",
