--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,10 @@
     "name" : "webservco/jsonapi-application",
     "require": {
         "php" : "^8.3",
+        "fig/http-message-util": "^1",
         "psr/http-message": "^2",
         "webservco/data": "^0",
+        "webservco/form": "^0",
         "webservco/jsonapi": "^0"
     },
     "require-dev": {
