--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "psr/http-message": "^2",
         "webservco/data": "^0",
         "webservco/form": "^0",
-        "webservco/jsonapi": "^0"
+        "webservco/jsonapi": "^0",
+        "webservco/view": "^0"
     },
     "require-dev": {
         "pds/skeleton": "^1",
