Restore missing http dependency.

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "psr/http-message": "^2",
         "webservco/data": "^0",
         "webservco/form": "^0",
+        "webservco/http": "^0",
         "webservco/jsonapi": "^0",
         "webservco/view": "^0"
     },
